# mnogosearch-typo3

./: .gitignore  README  Readme.md  installation-debian.sh
mnogosearch-sources/: ChangeLog  FAQ  INSTALL  Makefile.am  Makefile.in  README  README.CVS  README.XML  TODO  aclocal.m4  configure  configure.in  install.pl
mnogosearch-sources/create/: Makefile.in
mnogosearch-sources/create/cache/: Makefile.in
mnogosearch-sources/create/db2/: Makefile.in  create.blob.txt
mnogosearch-sources/create/ibase/: Makefile.in  create.txt  multi.txt
mnogosearch-sources/create/mimer/: Makefile.in
mnogosearch-sources/create/monetdb/: Makefile.am  Makefile.in  drop.single.txt
mnogosearch-sources/create/mssql/: Makefile.am  Makefile.in  create.blob.txt  create.txt  drop.multi.txt  drop.txt
mnogosearch-sources/create/mysql/: Makefile.in  drop.blob.txt
mnogosearch-sources/create/oracle/: Makefile.in  create.blob.txt  create.txt  drop.multi.txt  drop.txt  multi.txt
mnogosearch-sources/create/pgsql/: Makefile.am  Makefile.in  create.blob.txt  create.txt
mnogosearch-sources/create/sapdb/: Makefile.in  crc-multi.ins  create-all.ins  create.sh  drop.ins  multi.ins
mnogosearch-sources/create/solid/: Makefile.am  Makefile.in  README  create.txt
mnogosearch-sources/create/sqlite/: Makefile.in  create.txt  drop.txt
mnogosearch-sources/create/sybase/: Makefile.am  Makefile.in  README  create.multi.txt
mnogosearch-sources/create/virtuoso/: Makefile.in  create.blob.txt  create.txt  drop.blob.txt
mnogosearch-sources/doc/: Makefile.am  Makefile.in  README.html  body-after.html  book.xml  bugs.xml  cache.xml  categories.xml  changelog.xml  cjk.xml  cmdref.xml  db2.xml  exec-cgi.xml  follow.xml  formats.xml  fuzzy.xml  htmlparser.xml  index.html  indexer.1  install.xml  intro.xml  itips.xml  lib.xml  mirror.xml  mnogo.css  mp3.xml  msearch-authors.html  msearch-binarydistrib.html  msearch-bugs.html  msearch-c-api-udmagentaddline.html  msearch-c-api-udmagentfree.html  msearch-c-api-udmagentinit.html  msearch-c-api-udmenvfree.html  msearch-c-api-udmenvinit.html  msearch-c-api-udmfind2.html  msearch-c-api-udmresultfree.html  msearch-c-api.html  msearch-cachemode.html  msearch-changelog.html  msearch-cjk.html  (+206 more)
mnogosearch-sources/doc/samples/: ftpsearch.conf  news.conf
mnogosearch-sources/etc/: Makefile.in  indexer.conf-dist  langmap.conf-dist  node.xml-dist  search.htm-dist
mnogosearch-sources/etc/freq/: Makefile.am  Makefile.in  TraditionalChinese.freq
mnogosearch-sources/etc/langmap/: Makefile.am  Makefile.in  zh-hans.utf8.lm
mnogosearch-sources/etc/stopwords/: Makefile.am  Makefile.in  en.sl  fr.sl  ua.sl  zh.sl
mnogosearch-sources/etc/synonym/: Makefile.in  italian.syn
mnogosearch-sources/include/: Makefile.am  Makefile.in  udm_agent.h  udm_alias.h  udm_autoconf.h.in  udm_boolean.h  udm_chinese.h  udm_common.h  udm_conf.h  udm_config.h  udm_contentencoding.h  udm_crc32.h  udm_crossword.h  udm_db.h  udm_db_int.h  udm_dirent.h  udm_doc.h  udm_env.h  udm_execget.h  udm_ftp.h  udm_getopt.h  udm_guesser.h  udm_hash.h  udm_host.h  udm_hrefs.h  udm_http.h  udm_id3.h  udm_indexer.h  udm_log.h  udm_match.h  udm_mutex.h  udm_parsehtml.h  udm_parser.h  udm_parsexml.h  udm_proto.h  udm_result.h  udm_robots.h  udm_sdp.h  udm_searchcache.h  udm_searchtool.h  (+22 more)
mnogosearch-sources/misc/: Makefile.am  Makefile.in
mnogosearch-sources/msearch-test/: Makefile.am  Makefile.in  msearchtest-run  msearchtest.c
mnogosearch-sources/msearch-test/test-alias/: query.res
mnogosearch-sources/msearch-test/test-aliasprog/: indexer.conf  query.res
mnogosearch-sources/msearch-test/test-blob/: query.res  query.tst  search.res  searchni.res  test.cmd
mnogosearch-sources/msearch-test/test-boolean/: indexer.conf  search.htm  search.res  test.cmd
mnogosearch-sources/msearch-test/test-cachedcopy/: bug749.conf  cached.res  indexer.conf  query.res  search.htm  search.res  test.cmd
mnogosearch-sources/msearch-test/test-canonize/: indexer.conf  query.res
mnogosearch-sources/msearch-test/test-catdoc/: indexer2.conf  indexer3.conf  query.res
mnogosearch-sources/msearch-test/test-charset/: indexer.conf  query.res
mnogosearch-sources/msearch-test/test-cluster/: search.res  test.cmd  (+4 more)
mnogosearch-sources/perl/: Makefile.PL.in
mnogosearch-sources/php/: README  config.m4  index.php  php_mnogo.c  php_mnogo.h
mnogosearch-sources/scripts/: Makefile.am  Makefile.in  udm-config.in
mnogosearch-sources/src/: Makefile.am  Makefile.in  agent.c  alias.c  base64.c  boolean.c  chinese.c  conf.c  contentencoding.c  coords.c  crc32.c  crossword.c  date.c  db.c  dbmode-blob.c  dbmode-multi.c  dbmode-rawblob.c  dbmode-single.c  dbug.c  distance.c  doc.c  dstr.c  ef_print.c  efence.c  env.c  excerpt.c  execget.c  features.c  ftp.c  fuzzy.c  getopt.c  groupby.c  guesser.c  hash.c  highlight.c  host.c  hrefs.c  htdb.c  http.c  httpd.c  (+78 more)
source/doc/: Makefile.am  aliases.xml  body-before.html  c-api.xml  cachemode.xml  catalog.in  charset.xml  cluster.xml  cmdref.xml  content-enc.xml  dbschema.xml  dump-restore.xml  envvars.xml  fuzzy.xml  general.xml  htdb.xml  html-design.xml  htmlparser.xml  httpcodes.xml  index.html  indexcmd.xml  indexer.conf.5  install.xml  intro.xml  mnogo.dsl  msearch-authors.html  msearch-binarydistrib.html  msearch-bugs.html  msearch-c-api-udmagentaddline.html  msearch-c-api-udmagentfree.html  msearch-c-api-udmenvfree.html  msearch-c-api-udmfind2.html  msearch-c-api.html  msearch-cachemode.html  msearch-cjk.html  msearch-cmdref-addencoding.html  msearch-cmdref-addtype.html  msearch-cmdref-alias.html  msearch-cmdref-alwaysfoundword.html  msearch-cmdref-cache.html  (+91 more)
source/src/: Makefile.am  agent.c  alias.c  boolean.c  coords.c  crossword.c  date.c  dbmode-blob.c  dbmode-multi.c  dbmode-rawblob.c  dbmode-single.c  dbug.c  doc.c  dstr.c  ef_page.c  env.c  execget.c  fuzzy.c  groupby.c  hash.c  highlight.c  hrefs.c  htdb.c  http.c  httpd.c  id3.c  indexer.c  log.c  mguesser.c  mirror.c  parsedate.c  parsehtml.c  proto.c  qcache.c  regex.c  robots.c  search_tl.c  searchcache.c  section.c  segment.c  (+21 more)
(+606 files in other folders)
