include_HEADERS = \
udm_agent.h \
udm_alias.h \
udm_autoconf.h \
udm_boolean.h \
udm_chinese.h \
udm_common.h \
udm_conf.h \
udm_config.h \
udm_contentencoding.h \
udm_crc32.h \
udm_crossword.h \
udm_db.h \
udm_db_int.h \
udm_dirent.h \
udm_doc.h \
udm_env.h \
udm_execget.h \
udm_ftp.h \
udm_getopt.h \
udm_guesser.h \
udm_hash.h \
udm_host.h \
udm_hrefs.h \
udm_http.h \
udm_id3.h \
udm_indexer.h \
udm_log.h \
udm_match.h \
udm_mutex.h \
udm_parsedate.h \
udm_parsehtml.h \
udm_parser.h \
udm_parsexml.h \
udm_proto.h \
udm_regex.h \
udm_result.h \
udm_robots.h \
udm_sdp.h \
udm_searchcache.h \
udmsearch.h \
udm_search_tl.h \
udm_searchtool.h \
udm_server.h \
udm_services.h \
udm_sgml.h \
udm_signals.h \
udm_socket.h \
udm_spell.h \
udm_sqldbms.h \
udm_stopwords.h \
udm_store.h \
udm_synonym.h \
udm_template.h \
udm_textlist.h \
udm_unicode.h \
udm_uniconv.h \
udm_unidata.h \
udm_url.h \
udm_utils.h \
udm_vars.h \
udm_wild.h \
udm_word.h \
udm_xmalloc.h


dist-hook:
	$(RM) -f $(distdir)/udm_autoconf.h

