TESTS = msearchtest-run

check_PROGRAMS = msearchtest
msearchtest_SOURCES = msearchtest.c

CLEANFILES = msearchtest msearchtest.log sqlnet.log

test_boolean_FILES = \
test-boolean/htdocs/owner01.txt \
test-boolean/htdocs/owner02.txt \
test-boolean/htdocs/owner03.txt \
test-boolean/htdocs/owner04.txt \
test-boolean/htdocs/owner05.txt \
test-boolean/htdocs/owner06.txt \
test-boolean/indexer.conf \
test-boolean/search.htm \
test-boolean/search.res \
test-boolean/test.cmd

test_follow_FILES = \
test-follow/indexer.conf \
test-follow/indexer1.conf \
test-follow/query.res \
test-follow/query.tst \
test-follow/test.cmd \
test-follow/htdocs1/test.html \
test-follow/htdocs2/test.html \
test-follow/htdocs3/test1.html

test_idf_FILES = \
test-idf/indexer.conf \
test-idf/search.htm \
test-idf/search.res \
test-idf/test-ab.txt \
test-idf/test-ac.txt \
test-idf/test-a.txt \
test-idf/test-bc.txt \
test-idf/test.cmd

test_importance_FILES = \
test-importance/indexer.conf \
test-importance/search.htm \
test-importance/search.res \
test-importance/test.cmd \
test-importance/test01.html \
test-importance/test02.html \
test-importance/test03.html

test_indexif_FILES = \
test-indexif/indexer.conf \
test-indexif/query.res \
test-indexif/query.tst \
test-indexif/test.cmd \
test-indexif/htdocs/test1.html \
test-indexif/htdocs/test2.html \
test-indexif/htdocs/test1.txt

test_include_FILES = \
test-include/include.conf \
test-include/indexer.conf \
test-include/query.res \
test-include/query.tst \
test-include/search.res \
test-include/search.htm \
test-include/test.cmd \
test-include/htdocs/test1.html \
test-include/htdocs/test2.html \
test-include/htdocs/test3.html \
test-include/htdocs/test1.txt

test_hrefonly_FILES = \
test-hrefonly/indexer.conf \
test-hrefonly/query.res \
test-hrefonly/query.tst \
test-hrefonly/test.cmd \
test-hrefonly/htdocs/test1.html \
test-hrefonly/htdocs/test2.html \
test-hrefonly/htdocs/test3.html \
test-hrefonly/htdocs/test1.txt

test_mailto_FILES = \
test-mailto/indexer.conf \
test-mailto/query.res \
test-mailto/query.tst \
test-mailto/test.cmd \
test-mailto/htdocs/test.html

test_notfound_FILES = \
test-notfound/indexer.conf \
test-notfound/indexer1.conf \
test-notfound/query.res \
test-notfound/query.tst \
test-notfound/test.cmd \
test-notfound/htdocs/test1.html \
test-notfound/htdocs/test2.html \
test-notfound/htdocs/test1.txt

test_notmodified_FILES = \
test-notmodified/indexer.conf \
test-notmodified/query.res \
test-notmodified/query.tst \
test-notmodified/test.cmd \
test-notmodified/htdocs/test1.html \
test-notmodified/htdocs/test2.html \
test-notmodified/htdocs/test3.html

test_numeric_FILES = \
test-numeric/indexer.conf \
test-numeric/search.htm \
test-numeric/search.res \
test-numeric/test-100.html \
test-numeric/test-200.html \
test-numeric/test.cmd

test_openxml_FILES = \
test-openxml/indexer.conf \
test-openxml/query.res \
test-openxml/query.tst \
test-openxml/sample.docx \
test-openxml/sample.pptx \
test-openxml/sample.xlsx \
test-openxml/search.htm \
test-openxml/test.cmd

test_parsedocx_FILES = \
test-parsedocx/indexer.conf \
test-parsedocx/query.res \
test-parsedocx/query.tst \
test-parsedocx/sample.docx \
test-parsedocx/sample2.docx \
test-parsedocx/sample4-lists.docx \
test-parsedocx/search.htm \
test-parsedocx/test.cmd

test_parsertf_FILES = \
test-parsertf/indexer.conf \
test-parsertf/query.res \
test-parsertf/query.tst \
test-parsertf/search.htm \
test-parsertf/test2.rtf \
test-parsertf/test3.rtf \
test-parsertf/test.cmd \
test-parsertf/test.rtf

test_parsexml_FILES = \
test-parsexml/indexer.conf \
test-parsexml/query.res \
test-parsexml/query.tst \
test-parsexml/test.cmd \
test-parsexml/htdocs/cp1251.xml \
test-parsexml/htdocs/docbook.xml \
test-parsexml/htdocs/utf8.xml \
test-parsexml/htdocs/hook.xml \
test-parsexml/htdocs/index.xml \
test-parsexml/htdocs/ooffice.en.xml

test_unidata_FILES = \
test-unidata/indexer.conf \
test-unidata/query.res \
test-unidata/query.tst \
test-unidata/test.cmd \
test-unidata/htdocs/tamil.html

test_persite_FILES = \
test-persite/indexer.conf \
test-persite/query.res \
test-persite/query.tst \
test-persite/search.htm \
test-persite/search.res \
test-persite/test.cmd \
test-persite/htdocs/site0.page1.html \
test-persite/htdocs/site0.page2.html \
test-persite/htdocs/site1.page3.html \
test-persite/htdocs/site1.page4.html \
test-persite/htdocs/site1.page5.html

test_quotes_FILES = \
test-quotes/indexer.conf \
test-quotes/query.res \
test-quotes/query.tst \
test-quotes/test.cmd \
test-quotes/htdocs/test1.txt

test_range_FILES = \
test-range/indexer.conf \
test-range/search.htm \
test-range/search.res \
test-range/test1.html \
test-range/test201.xml \
test-range/test.cmd

test_revalias_FILES = \
test-revalias/dict.res \
test-revalias/dict.tst \
test-revalias/indexer0.conf \
test-revalias/indexer1.conf \
test-revalias/test.cmd \
test-revalias/url.tst \
test-revalias/url0.res \
test-revalias/url1.res \
test-revalias/htdocs/a.txt \
test-revalias/htdocs/b.txt \
test-revalias/htdocs/c.txt

test_revalias1_FILES = \
test-revalias1/indexer.conf \
test-revalias1/test.cmd \
test-revalias1/query.tst \
test-revalias1/query.res \
test-revalias1/htdocs/index.html

test_mecab_FILES = \
test-mecab/indexer.conf \
test-mecab/JA.html \
test-mecab/query.res \
test-mecab/query.tst \
test-mecab/test.cmd

test_meta_FILES= \
test-meta/indexer.conf \
test-meta/index.html \
test-meta/query.res \
test-meta/query.tst \
test-meta/test.cmd

test_multi_FILES = \
test-multi/indexer.conf \
test-multi/indexer2.conf \
test-multi/query.res \
test-multi/query.tst \
test-multi/search.res \
test-multi/search.htm \
test-multi/test.cmd \
test-multi/htdocs/test1.html \
test-multi/htdocs/test2.html \
test-multi/htdocs/test3.html \
test-multi/htdocs/test1.txt

test_complexbody_FILES = \
test-complexbody/indexer.conf \
test-complexbody/query.res \
test-complexbody/query.tst \
test-complexbody/test.cmd \
test-complexbody/htdocs/test1.html \
test-complexbody/htdocs/test2.html

test_content_encoding_FILES = \
test-content-encoding/indexer.conf \
test-content-encoding/index.htm.gz \
test-content-encoding/query.res \
test-content-encoding/query.tst \
test-content-encoding/test.cmd

test_charset_FILES = \
test-charset/indexer.conf \
test-charset/query.res \
test-charset/query.tst \
test-charset/test.cmd \
test-charset/htdocs/ZH.html

test_sections_FILES = \
test-sections/indexer.conf \
test-sections/indexer-nb.conf \
test-sections/userdef.conf \
test-sections/userdef1.conf \
test-sections/userdef2.conf \
test-sections/query.res \
test-sections/query.tst \
test-sections/search.htm \
test-sections/search.res \
test-sections/test.cmd \
test-sections/htdocs/test1.html \
test-sections/htdocs/test2.html \
test-sections/htdocs/test1.txt \
test-sections/htdocs/test2.txt \
test-sections/htdocs/test3.txt

test_segment_cjk_FILES = \
test-segment-cjk/index.html \
test-segment-cjk/indexer.conf \
test-segment-cjk/query.res \
test-segment-cjk/query.tst \
test-segment-cjk/search.htm \
test-segment-cjk/search.res \
test-segment-cjk/test.cmd 

test_sample_FILES = \
test-sample/indexer.conf \
test-sample/dbaddr.conf \
test-sample/query.res \
test-sample/query.tst \
test-sample/qtrack.res \
test-sample/qtrack.tst \
test-sample/test.cmd \
test-sample/search.htm \
test-sample/search.res \
test-sample/htdocs/test1.html \
test-sample/htdocs/test2.html \
test-sample/htdocs/test3.html \
test-sample/htdocs/test4.html \
test-sample/htdocs/test5.html \
test-sample/htdocs/test1.txt

test_parsehtml_FILES = \
test-parsehtml/indexer.conf \
test-parsehtml/query.res \
test-parsehtml/query.tst \
test-parsehtml/test.cmd \
test-parsehtml/htdocs/index.html

test_catdoc_FILES = \
test-catdoc/indexer.conf \
test-catdoc/indexer2.conf \
test-catdoc/indexer3.conf \
test-catdoc/query.res \
test-catdoc/query.tst \
test-catdoc/test.cmd \
test-catdoc/htdocs/a.doc \
test-catdoc/htdocs/b.doc

test_pdftohtml_FILES = \
test-pdftohtml/b.doc \
test-pdftohtml/b.pdf \
test-pdftohtml/indexer.conf \
test-pdftohtml/query.res \
test-pdftohtml/query.tst \
test-pdftohtml/test.cmd

test_pdftotext_FILES = \
test-pdftotext/indexer.conf \
test-pdftotext/query.res \
test-pdftotext/query.tst \
test-pdftotext/test.cmd \
test-pdftotext/htdocs/a.pdf \
test-pdftotext/htdocs/b.pdf

test_guesser_FILES = \
test-guesser/indexer.conf \
test-guesser/query.res \
test-guesser/query.tst \
test-guesser/test.cmd \
test-guesser/htdocs/de.latin1.txt \
test-guesser/htdocs/nl.latin1.txt \
test-guesser/htdocs/pl.latin2.txt \
test-guesser/htdocs/ru.koi8r.txt \
test-guesser/htdocs/ru.utf8.txt

test_density_FILES= \
test-density/indexer.conf \
test-density/search.htm \
test-density/search.res \
test-density/test.cmd \
test-density/test.html

test_distance_FILES= \
test-distance/indexer.conf \
test-distance/search.htm \
test-distance/search.res \
test-distance/test-aabb.html \
test-distance/test-aaxxxb.html \
test-distance/test-abab.html \
test-distance/test-abba.html \
test-distance/test-abc.html \
test-distance/test-acb.html \
test-distance/test-axxxbb.html \
test-distance/test-baba.html \
test-distance/test-bac.html \
test-distance/test-bca.html \
test-distance/test-cab.html \
test-distance/test-cba.html \
test-distance/test.cmd \
test-distance/test.sql

test_excerpt_FILES = \
test-excerpt/expect-beg.res \
test-excerpt/expect-end.res \
test-excerpt/expect-sub.res \
test-excerpt/expect-phr.res \
test-excerpt/expect0-1.res \
test-excerpt/expect1-1.res \
test-excerpt/expect1-2.res \
test-excerpt/expect1-3.res \
test-excerpt/expect1-4.res \
test-excerpt/expect1-5.res \
test-excerpt/expect1-6.res \
test-excerpt/expect2-1.res \
test-excerpt/expect2-2.res \
test-excerpt/expect2-3.res \
test-excerpt/expect2-4.res \
test-excerpt/expect2-5.res \
test-excerpt/expect2-6.res \
test-excerpt/expect3-1.res \
test-excerpt/expect3-2.res \
test-excerpt/expect3-3.res \
test-excerpt/expect3-4.res \
test-excerpt/expect3-5.res \
test-excerpt/expect3-6.res \
test-excerpt/expect4-1.res \
test-excerpt/expect4-2.res \
test-excerpt/expect4-3.res \
test-excerpt/expect4-4.res \
test-excerpt/expect4-5.res \
test-excerpt/expect4-6.res \
test-excerpt/expect5-1.res \
test-excerpt/expect5-2.res \
test-excerpt/expect5-3.res \
test-excerpt/expect5-4.res \
test-excerpt/expect5-5.res \
test-excerpt/expect5-6.res \
test-excerpt/expect6-1.res \
test-excerpt/expect6-2.res \
test-excerpt/expect6-3.res \
test-excerpt/expect6-4.res \
test-excerpt/expect6-5.res \
test-excerpt/expect6-6.res \
test-excerpt/indexer1.conf \
test-excerpt/indexer2.conf \
test-excerpt/indexer3.conf \
test-excerpt/indexer4.conf \
test-excerpt/indexer5.conf \
test-excerpt/indexer6.conf \
test-excerpt/search0.htm \
test-excerpt/search1.htm \
test-excerpt/search2.htm \
test-excerpt/search3.htm \
test-excerpt/test.cmd \
test-excerpt/htdocs/test1.html \
test-excerpt/htdocs/test1.txt \
test-excerpt/htdocs/test2.html

test_canonize_FILES = \
test-canonize/htdocs/a.txt \
test-canonize/htdocs/b.txt \
test-canonize/htdocs/~.txt \
test-canonize/htdocs/test.html \
test-canonize/indexer.conf \
test-canonize/query.res \
test-canonize/query.tst \
test-canonize/test.cmd

test_template_FILES = \
test-template/search.htm \
test-template/search.res \
test-template/test.cmd

test_tmplang_FILES = \
test-tmplang/dbaddr.conf \
test-tmplang/htdocs/index.html \
test-tmplang/indexer.conf \
test-tmplang/search.htm \
test-tmplang/search.res \
test-tmplang/test.cmd

test_cachedcopy_FILES = \
test-cachedcopy/htdocs/bug749.html \
test-cachedcopy/htdocs/index.xml \
test-cachedcopy/htdocs/test01.txt \
test-cachedcopy/bug749.conf \
test-cachedcopy/cached.res \
test-cachedcopy/indexer.conf \
test-cachedcopy/query.res \
test-cachedcopy/query.tst \
test-cachedcopy/search.htm \
test-cachedcopy/search.res \
test-cachedcopy/test.cmd

test_limits_FILES = \
test-limits/htdocs/test1.html \
test-limits/htdocs/test2.html \
test-limits/htdocs/test3.html \
test-limits/indexer.conf \
test-limits/search.htm \
test-limits/search.res \
test-limits/test.cmd

test_blob_FILES = \
test-blob/indexer-blob.conf \
test-blob/indexer.conf \
test-blob/query-u.res \
test-blob/query.res \
test-blob/query.tst \
test-blob/test.cmd \
test-blob/search.htm \
test-blob/search.res \
test-blob/searchni.res \
test-blob/htdocs/test1.html \
test-blob/htdocs/test2.html \
test-blob/htdocs/test3.html \
test-blob/htdocs/test4.html \
test-blob/htdocs/test5.html \
test-blob/htdocs/test1.txt \
test-blob/z.sl

test_aliasprog_FILES = \
test-aliasprog/indexer.conf \
test-aliasprog/query.res \
test-aliasprog/query.tst \
test-aliasprog/test.cmd \
test-aliasprog/htdocs/test.html

test_alias_FILES = \
test-alias/indexer.conf \
test-alias/query.res \
test-alias/query.tst \
test-alias/test.cmd \
test-alias/htdocs/test.txt

test_robots_FILES = \
test-robots/indexer.conf \
test-robots/query.res \
test-robots/query.tst \
test-robots/test.cmd \
test-robots/robots.txt \
test-robots/htdocs/sitemap1.xml \
test-robots/htdocs/sitemap2.xml \
test-robots/htdocs/test1.html \
test-robots/htdocs/test2.html

test_merge_FILES = \
test-merge/test.cmd \
test-merge/htdocs/test1.html \
test-merge/htdocs/test2.html \
test-merge/htdocs/test3.html \
test-merge/htdocs/test4.html \
test-merge/htdocs/test5.html \
test-merge/htdocs/test6.html \
test-merge/htdocs/test7.html \
test-merge/htdocs/test8.html \
test-merge/search.htm \
test-merge/search.res \
test-merge/query.res \
test-merge/query.tst \
test-merge/indexer.conf

test_message_FILES = \
test-message/bad01.eml \
test-message/indexer.conf \
test-message/query.res \
test-message/query.tst \
test-message/search.htm \
test-message/test01.eml \
test-message/test04.eml \
test-message/test07.eml \
test-message/test08.eml \
test-message/test09.eml \
test-message/test10.eml \
test-message/test11.eml \
test-message/test12.eml \
test-message/test14.eml \
test-message/test15.eml \
test-message/test16.eml \
test-message/test17.eml \
test-message/test18.eml \
test-message/test19.eml \
test-message/test20.eml \
test-message/test.cmd \
test-message/test.eml \
test-message/test.mht

test_message_catdoc_FILES = \
test-message-catdoc/indexer.conf \
test-message-catdoc/query.res \
test-message-catdoc/query.tst \
test-message-catdoc/test.cmd \
test-message-catdoc/test.eml

test_htdb_FILES = \
test-htdb/htdb-create.sql \
test-htdb/test.cmd \
test-htdb/htdb-drop.sql \
test-htdb/query.res \
test-htdb/query.tst \
test-htdb/indexer.conf

test_http_FILES = \
test-http/indexer.conf \
test-http/query.res \
test-http/query.sql \
test-http/test1.txt \
test-http/test2.html \
test-http/test3a.txt \
test-http/test3b.html \
test-http/test.cmd

test_fuzzy_FILES = \
test-fuzzy/test.cmd \
test-fuzzy/american.xlg \
test-fuzzy/british.xlg \
test-fuzzy/htdocs/colouring.txt \
test-fuzzy/htdocs/color.txt \
test-fuzzy/htdocs/colorers.txt \
test-fuzzy/htdocs/colourings.txt \
test-fuzzy/htdocs/colored.txt \
test-fuzzy/htdocs/colorer.txt \
test-fuzzy/htdocs/colorings.txt \
test-fuzzy/htdocs/colourers.txt \
test-fuzzy/htdocs/coloured.txt \
test-fuzzy/htdocs/coloring.txt \
test-fuzzy/htdocs/colourer.txt \
test-fuzzy/htdocs/colors.txt \
test-fuzzy/htdocs/colour.txt \
test-fuzzy/htdocs/colours.txt \
test-fuzzy/htdocs/rgb.txt \
test-fuzzy/htdocs/logfiles.txt \
test-fuzzy/en.sl \
test-fuzzy/english.aff \
test-fuzzy/english.syn \
test-fuzzy/search.htm \
test-fuzzy/search.res \
test-fuzzy/query.res \
test-fuzzy/query.tst \
test-fuzzy/indexer.conf

test_fuzzy_accents_FILES = \
test-fuzzy-accents/indexer.conf \
test-fuzzy-accents/search.htm \
test-fuzzy-accents/search.res \
test-fuzzy-accents/test1.html \
test-fuzzy-accents/test.cmd

test_fuzzy_cmatch_FILES = \
test-fuzzy-cmatch/indexer.conf \
test-fuzzy-cmatch/search.htm \
test-fuzzy-cmatch/search.res \
test-fuzzy-cmatch/test1.html \
test-fuzzy-cmatch/test2.html \
test-fuzzy-cmatch/test3.html \
test-fuzzy-cmatch/test.cmd

test_chasen_FILES = \
test-chasen/test.cmd \
test-chasen/htdocs/shift-jis.htm \
test-chasen/htdocs/euc-jp.htm \
test-chasen/htdocs/utf-8.htm \
test-chasen/htdocs/iso-2022-jp.htm \
test-chasen/query.res \
test-chasen/query.tst \
test-chasen/indexer.conf

test_ppthtml_FILES = \
test-ppthtml/indexer.conf \
test-ppthtml/query.res \
test-ppthtml/query.tst \
test-ppthtml/test.cmd  \
test-ppthtml/test.ppt 

test_rtfx_FILES = \
test-rtfx/indexer.conf \
test-rtfx/query.res \
test-rtfx/query.tst \
test-rtfx/test.cmd \
test-rtfx/test.rtf

test_search_FILES = \
test-search/test.cmd \
test-search/bad-dbaddr.htm \
test-search/bad-dbaddr.res \
test-search/htdocs/index.html \
test-search/search.htm \
test-search/search1.res \
test-search/search2.res \
test-search/search3.res \
test-search/search4.res \
test-search/search5.res \
test-search/search6.res \
test-search/search7.res \
test-search/search8.res \
test-search/search9.res \
test-search/search10.res \
test-search/search11.res \
test-search/search12.res \
test-search/search13.res \
test-search/search14.res \
test-search/search15.res \
test-search/search16.res \
test-search/indexer.conf \
test-search/dbaddr.conf \
test-search/stopwords

test_suggest_FILES = \
test-suggest/indexer.conf \
test-suggest/search.htm \
test-suggest/search.res \
test-suggest/test1.html \
test-suggest/test.cmd \
test-suggest/test.sql

test_cmdline_FILES = \
test-cmdline/test.cmd \
test-cmdline/arg-n.conf \
test-cmdline/query.res \
test-cmdline/urllist.txt

test_nwf_FILES= \
test-nwf/indexer.conf \
test-nwf/nwf1.html \
test-nwf/nwf2.html \
test-nwf/search.htm \
test-nwf/test.cmd \
test-nwf/test.res

test_cluster_FILES= \
test-cluster/search12.htm \
test-cluster/search1.htm \
test-cluster/search2.htm \
test-cluster/search3.htm \
test-cluster/search4g.htm \
test-cluster/search5.htm \
test-cluster/search.res \
test-cluster/test2.xml \
test-cluster/test3.xml \
test-cluster/test4g.xml \
test-cluster/test.cmd \
test-cluster/test.xml

test_user_score_FILES= \
test-user-score/indexer.conf \
test-user-score/search.htm \
test-user-score/search.res \
test-user-score/test1.html \
test-user-score/test2.html \
test-user-score/test.cmd


EXTRA_DIST = msearchtest-run \
 README \
 ${test_indexif_FILES} \
 ${test_boolean_FILES} \
 ${test_follow_FILES}   \
 ${test_hrefonly_FILES} \
 ${test_idf_FILES} \
 ${test_importance_FILES}  \
 ${test_include_FILES}  \
 ${test_mailto_FILES}   \
 ${test_quotes_FILES}   \
 ${test_revalias_FILES} \
 ${test_revalias1_FILES} \
 ${test_range_FILES} \
 ${test_multi_FILES} \
 ${test_mecab_FILES} \
 ${test_meta_FILES} \
 ${test_message_FILES} \
 ${test_message_catdoc_FILES} \
 ${test_complexbody_FILES} \
 ${test_content_encoding_FILES} \
 ${test_charset_FILES} \
 ${test_rtfx_FILES} \
 ${test_sections_FILES} \
 ${test_sample_FILES} \
 ${test_parsedocx_FILES} \
 ${test_parsehtml_FILES} \
 ${test_parsertf_FILES} \
 ${test_pdftotext_FILES} \
 ${test_pdftohtml_FILES} \
 ${test_guesser_FILES} \
 ${test_catdoc_FILES} \
 ${test_density_FILES} \
 ${test_distance_FILES} \
 ${test_excerpt_FILES} \
 ${test_canonize_FILES} \
 ${test_template_FILES} \
 ${test_tmplang_FILES} \
 ${test_cachedcopy_FILES} \
 ${test_notfound_FILES} \
 ${test_notmodified_FILES} \
 ${test_numeric_FILES} \
 ${test_openxml_FILES} \
 ${test_parsexml_FILES} \
 ${test_unidata_FILES} \
 ${test_persite_FILES} \
 ${test_limits_FILES} \
 ${test_blob_FILES} \
 ${test_aliasprog_FILES} \
 ${test_alias_FILES} \
 ${test_robots_FILES} \
 ${test_merge_FILES} \
 ${test_htdb_FILES} \
 ${test_http_FILES} \
 ${test_fuzzy_FILES} \
 ${test_fuzzy_accents_FILES} \
 ${test_fuzzy_cmatch_FILES} \
 ${test_chasen_FILES} \
 ${test_ppthtml_FILES} \
 ${test_search_FILES} \
 ${test_suggest_FILES} \
 ${test_nwf_FILES} \
 ${test_cluster_FILES} \
 ${test_cmdline_FILES} \
 ${test_segment_cjk_FILES} \
 ${test_user_score_FILES}

