man_MANS = indexer.1 indexer.conf.5

XML_SRC_EN = aliases.xml \
book.xml \
bugs.xml \
c-api.xml \
cache.xml \
cachemode.xml \
categories.xml \
changelog.xml \
charset.xml \
cluster.xml \
content-enc.xml \
db2.xml \
exec-cgi.xml \
follow.xml \
fuzzy.xml \
general.xml \
htdb.xml \
html-design.xml \
htmlparser.xml \
httpcodes.xml \
install.xml \
intro.xml \
itips.xml \
lib.xml \
mirror.xml \
dump-restore.xml \
mp3.xml \
negotiation.xml \
news.xml \
operators.xml \
oracle.xml \
parsers.xml \
perf.xml \
relevancy.xml \
search.xml \
servertable.xml \
sql-stor.xml \
stored.xml \
syslog.xml \
tags.xml \
templates.xml \
tracking.xml \
udmstemmer.xml \
cjk.xml \
dbschema.xml \
envvars.xml \
vary.xml \
indexcmd.xml \
cmdref.xml

HTML_OUT_EN = index.html \
msearch-authors.html \
msearch-binarydistrib.html \
msearch-bugs.html \
msearch-c-api.html \
msearch-c-api-udmagentaddline.html \
msearch-c-api-udmagentfree.html \
msearch-c-api-udmagentinit.html \
msearch-c-api-udmenvfree.html \
msearch-c-api-udmenvinit.html \
msearch-c-api-udmfind2.html \
msearch-c-api-udmresultfree.html \
msearch-cachemode.html \
msearch-changelog.html \
msearch-cjk.html \
msearch-cmdref-addencoding.html \
msearch-cmdref-addtype.html \
msearch-cmdref-affix.html \
msearch-cmdref-alias.html \
msearch-cmdref-aliasprog.html \
msearch-cmdref-allow.html \
msearch-cmdref-alwaysfoundword.html \
msearch-cmdref-authbasic.html \
msearch-cmdref-browsercharset.html \
msearch-cmdref-cache.html \
msearch-cmdref-casefolding.html \
msearch-cmdref-category.html \
msearch-cmdref-checkmp3.html \
msearch-cmdref-checkmp3only.html \
msearch-cmdref-checkonly.html \
msearch-cmdref-collectlinks.html \
msearch-cmdref-complexsynonyms.html \
msearch-cmdref-crawldelay.html \
msearch-cmdref-crawlerthreads.html \
msearch-cmdref-crosswords.html \
msearch-cmdref-customlog.html \
msearch-cmdref-cvsignore.html \
msearch-cmdref-datefactor.html \
msearch-cmdref-dateformat.html \
msearch-cmdref-dbaddr.html \
msearch-cmdref-defaultcontenttype.html \
msearch-cmdref-defaultlang.html \
msearch-cmdref-dehyphenate.html \
msearch-cmdref-detectclones.html \
msearch-cmdref-disallow.html \
msearch-cmdref-docmemcachesize.html \
msearch-cmdref-docsizeweight.html \
msearch-cmdref-doctimeout.html \
msearch-cmdref-excerptpadding.html \
msearch-cmdref-excerptsize.html \
msearch-cmdref-excerptstopword.html \
msearch-cmdref-flushservertable.html \
msearch-cmdref-followsymlinks.html \
msearch-cmdref-forceiischarset1251.html \
msearch-cmdref-groupbysite.html \
msearch-cmdref-guesserusemeta.html \
msearch-cmdref-hlbeg.html \
msearch-cmdref-hlend.html \
msearch-cmdref-holdbadhrefs.html \
msearch-cmdref-hrefonly.html \
msearch-cmdref-htdbaddr.html \
msearch-cmdref-htdbdoc.html \
msearch-cmdref-htdblimit.html \
msearch-cmdref-htdblist.html \
msearch-cmdref.html \
msearch-cmdref-httpheader.html \
msearch-cmdref-idffactor.html \
msearch-cmdref-importenv.html \
msearch-cmdref-include.html \
msearch-cmdref-index.html \
msearch-cmdref-indexif.html \
msearch-cmdref-indextime.html \
msearch-cmdref-ispelluseprefixes.html \
msearch-cmdref-langmapfile.html \
msearch-cmdref-langmapupdate.html \
msearch-cmdref-limit.html \
msearch-cmdref-loadchineselist.html \
msearch-cmdref-loadtaginfo.html \
msearch-cmdref-loadthailist.html \
msearch-cmdref-loadurlbasicinfo.html \
msearch-cmdref-loadurlinfo.html \
msearch-cmdref-localcharset.html \
msearch-cmdref-locale.html \
msearch-cmdref-log2stderr.html \
msearch-cmdref-loglevel.html \
msearch-cmdref-maxdocpersite.html \
msearch-cmdref-maxdocsize.html \
msearch-cmdref-maxhops.html \
msearch-cmdref-maxneterrors.html \
msearch-cmdref-maxwordlength.html \
msearch-cmdref-mime.html \
msearch-cmdref-mincoordfactor.html \
msearch-cmdref-minwordlength.html \
msearch-cmdref-mirrorheadersroot.html \
msearch-cmdref-mirrorperiod.html \
msearch-cmdref-mirrorroot.html \
msearch-cmdref-neterrordelaytime.html \
msearch-cmdref-newsextensions.html \
msearch-cmdref-noindexif.html \
msearch-cmdref-numdistinctwordfactor.html \
msearch-cmdref-numsections.html \
msearch-cmdref-numwordfactor.html \
msearch-cmdref-pagesperscreen.html \
msearch-cmdref-parsertimeout.html \
msearch-cmdref-period.html \
msearch-cmdref-poprankfeedback.html \
msearch-cmdref-poprankshowcntratio.html \
msearch-cmdref-poprankshowcntweight.html \
msearch-cmdref-poprankskipsamesite.html \
msearch-cmdref-poprankuseshowcnt.html \
msearch-cmdref-poprankusetracking.html \
msearch-cmdref-proxyauthbasic.html \
msearch-cmdref-proxy.html \
msearch-cmdref-readtimeout.html \
msearch-cmdref-realm.html \
msearch-cmdref-remotecharset.html \
msearch-cmdref-remotefilenamecharset.html \
msearch-cmdref-replacevar.html \
msearch-cmdref-resultcontenttype.html \
msearch-cmdref-resultslimit.html \
msearch-cmdref-reversealias.html \
msearch-cmdref-r.html \
msearch-cmdref-robots.html \
msearch-cmdref-savesectionsize.html \
msearch-cmdref-section.html \
msearch-cmdref-server.html \
msearch-cmdref-servertable.html \
msearch-cmdref-serverweight.html \
msearch-cmdref-skip.html \
msearch-cmdref-skipif.html \
msearch-cmdref-spell.html \
msearch-cmdref-sqlwordforms.html \
msearch-cmdref-starthops.html \
msearch-cmdref-stopwordfile.html \
msearch-cmdref-strictmodethreshold.html \
msearch-cmdref-stripaccents.html \
msearch-cmdref-subnet.html \
msearch-cmdref-substringmatchminwordlength.html \
msearch-cmdref-suggest.html \
msearch-cmdref-synonym.html \
msearch-cmdref-syslogfacility.html \
msearch-cmdref-tag.html \
msearch-cmdref-urldatathreshold.html \
msearch-cmdref-url.html \
msearch-cmdref-urlselectcachesize.html \
msearch-cmdref-urlselectskiplock.html \
msearch-cmdref-usecookie.html \
msearch-cmdref-usecrc32urlid.html \
msearch-cmdref-uselocalcachedcopy.html \
msearch-cmdref-usenumericoperators.html \
msearch-cmdref-usercachequery.html \
msearch-cmdref-useremotecontenttype.html \
msearch-cmdref-userorder.html \
msearch-cmdref-userscorefactor.html \
msearch-cmdref-userscore.html \
msearch-cmdref-usersitescore.html \
msearch-cmdref-usesitemap.html \
msearch-cmdref-vardir.html \
msearch-cmdref-varylang.html \
msearch-cmdref-wf.html \
msearch-cmdref-wordcachesize.html \
msearch-cmdref-worddensityfactor.html \
msearch-cmdref-worddistanceweight.html \
msearch-cmdref-wordformfactor.html \
msearch-cluster.html \
msearch-content-enc.html \
msearch-contriblist.html \
msearch-db2.html \
msearch-dbschema.html \
msearch-disclaimer.html \
msearch-doingsearch.html \
msearch-extended-indexing.html \
msearch-faq.html \
msearch-fuzzy.html \
msearch-get.html \
msearch-howstore.html \
msearch-html.html \
msearch-htmlparser-comments.html \
msearch-htmlparser.html \
msearch-htmlparser-links.html \
msearch-htmlparser-meta.html \
msearch-htmlparser-spec.html \
msearch-http-codes.html \
msearch-indexer-configuration.html \
msearch-index.html \
msearch-indexing.html \
msearch-inetd.html \
msearch-install.html \
msearch-installing.html \
msearch-installproblem.html \
msearch-international.html \
msearch-intro.html \
msearch-itips.html \
msearch-lib.html \
msearch-misc.html \
msearch-multilang.html \
msearch-opsys.html \
msearch-oracle.html \
msearch-parsers.html \
msearch-perf.html \
msearch-reference.html \
msearch-register.html \
msearch-rel.html \
msearch-srcache.html \
msearch-stored.html \
msearch-subsections.html \
msearch-syslog.html \
msearch-tags.html \
msearch-templates.html \
msearch-templates-oper.html \
msearch-toolsreq.html \
msearch-track.html \
msearch-udmstemmer.html \
msearch-vary.html


XML_SRC = ${XML_SRC_EN}
HTML_OUT = ${HTML_OUT_EN}
HTML_ALL = ${HTML_OUT} body-after.html body-before.html mnogo.css
HTML_ALL_NOJADE = README.html
doc_FILES= ${@doc_FILES@}

sample_FILES= samples/README \
samples/ftpsearch.conf \
samples/htdb.conf \
samples/minimal.conf \
samples/news.conf

EXTRA_DIST = ${man_MANS} ${XML_SRC} ${doc_FILES} ${sample_FILES} \
README.html catalog.in mnogo.dsl

CLEANFILES= ${HTML_OUT} HTML.index HTML.manifest index.xml


JADE = @JADE@


install-data-local: $(doc_FILES)
	$(mkinstalldirs) $(DESTDIR)$(prefix)/doc
	echo ${INSTALL_DATA} docs $(DESTDIR)$(prefix)/doc/
	list='${doc_FILES}'; \
	for p in $$list; do \
		${INSTALL_DATA} $(srcdir)/$$p $(DESTDIR)$(prefix)/doc/ ; \
	done

uninstall-local:
	list='${doc_FILES}'; \
	for p in $$list; do \
		rm -f $(DESTDIR)$(prefix)/doc/$$p ; \
	done

index.html: $(XML_SRC_EN) mnogo.dsl
	perl @COLLATEINDEX@ -N -i index -o index.xml HTML.index
	$(JADE) -V html-index -v -wno-valid -c ./catalog -d ./mnogo.dsl -t sgml \
		 @DOCBOOKSTYLE@/dtds/decls/xml.dcl \
		 book.xml

doc33.tar.gz: index.html
	rm -rf doc33
	mkdir doc33
	cp $(HTML_OUT_EN) mnogo.css doc33/
	tar -zcf doc33.tar.gz doc33
	rm -rf doc33

upload: doc33.tar.gz
	scpsite doc33.tar.gz

#
# Check man files for errors using the same commands
# rpmlint runs for man pages (see FilesCheck.py from rpmlint distribution)
#
check-man:
	groff -mtty-char -Tutf8 -P-c -mandoc -wmac  indexer.conf.5  >/dev/null
	groff -mtty-char -Tutf8 -P-c -mandoc -wmac  indexer.1  >/dev/null
